k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: komora
  labels:
    app.kubernetes.io/name: komorapy
    app.kubernetes.io/part-of: komora
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
