k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komorapy
  namespace: komora
  labels:
    app.kubernetes.io/name: komorapy
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: komorapy
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
      nodePort: 30080
